# drone-graph

./: .claudeignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  start
.github/: PULL_REQUEST_TEMPLATE.md
architecture-notes/: Phase4-implementation.md  model-registry.md  modules.md  notes-01-gaps-collective-mind.md  notes-02-infinite-process.md  notes-03-ontology.md  phase-0-and-1.md  phase-0.md  phase-3-plan.md  synthesis.md
core-idea/: architectural_overview.md  decomposition.md  drone-theory.md
defunct-ideas-ignore/: landing-page-brief.md  landing_page.md  market_research.md  social-theory.md
scripts/: check_profiles.py  test_chrome_launch_cdp.py
tests/: conftest.py  test_anthropic_models_list_dump.py  test_authenticated_browser.py  test_cm_findings_skill_invocation.py  test_cm_search_tools_drone.py  test_concurrency_tools.py  test_crawl4ai_page_tool.py  test_doc_enrich_deprecations_excerpt.py  test_drone_providers.py  test_embeddings_store.py  test_model_registry.py  test_openai_docs_crawl.py  test_phase1_topological.py  test_registry_generate.py  test_run_drone_skill_preload.py  test_semantic_tool_search.py  test_shared_venv_terminal.py  test_signal_store.py  test_skill_invocation_finding.py  test_skill_package_parser.py  test_skill_registry_builtin.py  test_smoke.py  test_terminal.py  test_terminal_skill_invocation.py  test_tool_deprecation.py  test_tool_skill_link.py  test_tool_trust_tiers.py  test_vendor_doc_cache.py
web/: index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
(+170 files in other folders)
